# faast

./: pyproject.toml
